# Lily

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Character/: Character.h  CharacterManager.cpp  CharacterManager.h
src/Cognition/: LilyState.cpp  LilyState.h  StateAnalyzer.cpp  StateAnalyzer.h  WorkingMemory.cpp  WorkingMemory.h
src/Core/: EventBus.h  Events.h  LilyCore.cpp  LilyCore.h
src/LLM/: AIManager.cpp  AIManager.h  ILLMProvider.h  LocalProvider.cpp  LocalProvider.h  QwenProvider.cpp  QwenProvider.h
src/Memory/: MemoryAnalyzer.cpp  MemoryAnalyzer.h  MemoryCategory.cpp  MemoryCategory.h  MemoryEntry.h  MemoryManager.cpp  MemoryManager.h
src/Prompt/: PromptManager.cpp  PromptManager.h
src/Runtime/: RuntimeManager.cpp  RuntimeManager.h  RuntimeSettings.h
src/UI/: AgentSidebar.cpp  AgentSidebar.h  HeaderBar.cpp  HeaderBar.h  MainWindow.cpp  MainWindow.h  SettingsSidebar.cpp  SettingsSidebar.h  StatusBar.cpp  StatusBar.h  ViewPanel.cpp  ViewPanel.h
